--- a/src/components/Forms/AddPostForm/style.css
+++ b/src/components/Forms/AddPostForm/style.css
@@ -1,19 +1,21 @@
-.form form {
+.add-post-form-wrapper {
+  padding: 16px;
+  width: 300px;
+}
+
+.add-post-form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
 }
 
-.form h2 {
+.add-post-form-heading {
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.form .form-group {
-  margin-bottom: 10px;
-}
-
-.form button {
-  margin-top: 20px;
+.add-post-form button {
   background-color: #4d88ed;
   color: #fff;
   padding: 15px 40px;
@@ -22,16 +24,27 @@
   cursor: pointer;
 }
 
-.form button.disabled:hover {
-  background-color: #4d88ed;
+.add-post-form button.disabled:hover {
+  background-color: #98baf5;
   cursor: default;
 }
 
-.form button:hover {
+.add-post-form button.disabled {
+  background-color: #98baf5;
+  cursor: default;
+}
+
+.add-post-form button:hover {
   background-color: #3d7dec;
 }
 
-.add-post-button {
+.add-post-form__image-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add-post-form__image-upload-button {
   padding: 0.5rem 2rem;
   background-color: white;
   color: black;
@@ -41,20 +54,26 @@
   /* margin-bottom: 20px; */
 }
 
-form img.add-post-img {
+.add-post-form__image {
   border-radius: 1px;
   object-fit: cover;
   box-shadow: 0px 0px 25px 8px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
-.add-post-file-wrapper {
+/* .add-post-form__image-upload {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-}
+} */
 
 .errorr {
   color: red;
   font-size: 14px;
+}
+
+.huinya {
+  z-index: 5;
+  position: relative;
 }
