--- a/src/components/Forms/SettingsForm/style.css
+++ b/src/components/Forms/SettingsForm/style.css
@@ -29,6 +29,7 @@
 
 .settings-form__avatar {
   width: 130px;
+  height: 130px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   object-fit: cover;
