--- a/src/App.css
+++ b/src/App.css
@@ -50,41 +50,6 @@ main {
   display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .user-card {
   border: 2px solid rgb(175, 175, 175);
   padding: 10px 20px;
@@ -97,7 +62,8 @@ main {
   margin-bottom: 20px;
 }
 
-.user-card img {
+.user-card img,
+.user-card svg {
   margin-right: 30px;
   width: 50px;
   aspect-ratio: 1 / 1;
@@ -162,6 +128,75 @@ button.unfollow:hover {
   margin: 0;
 }
 
+.not-found-page {
+  height: 100vh;
+  width: 100%;
+  padding: 16px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.not-found-page__heading {
+  font-size: 50px;
+  color: #00abdf;
+  margin-bottom: 40px;
+}
+
+.not-found-img {
+  width: 80%;
+  margin-bottom: 40px;
+}
+
+.not-found-page__button {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #00bdf7;
+  font-weight: bold;
+  font-size: 16px;
+  color: #fff;
+  padding: 15px 40px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: fit-content;
+  margin: 0 auto;
+  display: block;
+}
+
+.not-found-page__button:hover {
+  background-color: #00abdf;
+}
+
+@media (max-width: 700px) {
+  .not-found-page__heading {
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+
+  .not-found-img {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 550px) {
+  .not-found-page__heading {
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+
+  .not-found-img {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .not-found-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+}
+
 @media (max-width: 600px) {
   .user-card {
     flex-direction: column;
@@ -170,7 +205,8 @@ button.unfollow:hover {
     /* gap: 10px; */
   }
 
-  .user-card img {
+  .user-card img,
+  .user-card svg {
     margin: auto;
     margin-bottom: 10px;
   }
