--- a/src/components/Forms/SignUpForm/style.css
+++ b/src/components/Forms/SignUpForm/style.css
@@ -1,18 +1,26 @@
-.form form {
+.login-form-wrapper {
+  background-color: #fff;
+  padding: 40px;
+  width: 90vw;
+  max-width: 350px;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
+}
+
+.login-form-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   align-items: center;
 }
 
-.form h2 {
-  text-align: center;
-}
-
-.form .form-group {
-  margin-bottom: 10px;
-}
-
-.form button {
+.login-form__button {
   margin-top: 20px;
   background-color: #4d88ed;
   color: #fff;
@@ -20,13 +28,36 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  width: fit-content;
+  margin-bottom: 20px;
 }
 
-.form button.disabled:hover {
-  background-color: #4d88ed;
+.login-form__button.disabled:hover {
+  background-color: #98baf5;
   cursor: default;
 }
 
-.form button:hover {
+.login-form__button.disabled {
+  background-color: #98baf5;
+  cursor: default;
+}
+
+.login-form__button:hover {
   background-color: #3d7dec;
+}
+
+.login-form-error {
+  font-size: 12px;
+  color: red;
+  margin-top: 10px;
+}
+
+.login-form-message {
+  font-size: 12px;
+  color: rgb(17, 172, 3);
+  margin-top: 10px;
+}
+
+.login-form-status {
+  margin-top: 10px;
 }
