--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,8 @@
+.header-wrapper {
+  width: 100%;
+  background-color: #4d88ed;
+}
+
 .header {
   background-color: #4d88ed;
   padding: 10px;
@@ -56,6 +61,10 @@
   background-color: transparent;
   border: none;
   color: white;
+}
+
+.header__icon-btn:first-child {
+  margin-right: 5px;
 }
 
 .header__back-btn {
