--- a/src/layouts/StartPageWrapper/style.css
+++ b/src/layouts/StartPageWrapper/style.css
@@ -5,12 +5,12 @@
 }
 
 .start-page-wrapper_container {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 60px;
+  width: 100%;
 }
 
 .logo-container {
