--- a/src/components/Forms/SettingsForm/style.css
+++ b/src/components/Forms/SettingsForm/style.css
@@ -18,6 +18,11 @@
   color: #0cc30c;
 }
 
+.settings-form-error {
+  margin-top: -35px;
+  color: red;
+}
+
 .settings-form__avatar-upload {
   border-radius: 10px;
   grid-row-start: 1;
@@ -78,7 +83,8 @@
     gap: 0;
   }
 
-  .settings-form-message {
+  .settings-form-message,
+  .settings-form-error {
     margin-top: -25px;
     padding-left: 5px;
     text-align: start;
