--- a/src/pages/UserPage/style.css
+++ b/src/pages/UserPage/style.css
@@ -120,7 +120,7 @@
 }
 
 .post-popup .post-info {
-  width: 100%;
+  width: 18rem;
 }
 
 .post-info__header {
@@ -251,7 +251,6 @@
   padding: 0;
   text-align: left;
   max-height: 300px;
-  height: 300px;
   overflow-y: auto;
 }
 
