--- a/src/pages/UserPage/style.css
+++ b/src/pages/UserPage/style.css
@@ -129,6 +129,7 @@
   gap: 30px;
   align-items: center;
   padding: 5px;
+  width: 18rem;
 }
 
 .post-info__header svg,
@@ -148,6 +149,7 @@
   align-items: center;
   padding: 5px 20px;
   gap: 10px;
+  width: 18rem;
 }
 
 .post-info__icon {
@@ -240,10 +242,12 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #dfdfdf;
+  width: 18rem;
 }
 
 .post-info__comments {
   padding-bottom: 10px;
+  width: 18rem;
 }
 
 .post-info__comments-ul {
@@ -252,6 +256,7 @@
   text-align: left;
   max-height: 300px;
   overflow-y: auto;
+  width: 18rem;
 }
 
 .post-info__comment {
@@ -260,6 +265,7 @@
   padding: 10px;
   word-break: break-all;
   gap: 10px;
+  width: 18rem;
 }
 
 .post-info__comment img,
