--- a/src/pages/UserPage/style.css
+++ b/src/pages/UserPage/style.css
@@ -1,3 +1,29 @@
+.postPopupBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post-popupp {
+  position: relative;
+  z-index: 999;
+  background-color: #fff;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  overflow: auto;
+  width: auto;
+  display: grid;
+  margin: 100px 0;
+}
+
 .user-page__header {
   display: flex;
   margin-bottom: 45px;
@@ -56,10 +82,11 @@
 }
 
 .post-img {
-  width: 18rem;
-  height: 18rem;
+  width: 100%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: top;
+  padding: 1rem;
 }
 
 .profile-btns-wrapper {
@@ -119,9 +146,9 @@
   border-right: 1px solid #dfdfdf;
 }
 
-.post-popup .post-info {
+/* .post-popup .post-info {
   width: 18rem;
-}
+} */
 
 .post-info__header {
   display: flex;
@@ -129,7 +156,6 @@
   gap: 30px;
   align-items: center;
   padding: 5px;
-  width: 18rem;
 }
 
 .post-info__header svg,
@@ -149,7 +175,6 @@
   align-items: center;
   padding: 5px 20px;
   gap: 10px;
-  width: 18rem;
 }
 
 .post-info__icon {
@@ -242,12 +267,10 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #dfdfdf;
-  width: 18rem;
 }
 
 .post-info__comments {
   padding-bottom: 10px;
-  width: 18rem;
 }
 
 .post-info__comments-ul {
@@ -256,7 +279,6 @@
   text-align: left;
   max-height: 300px;
   overflow-y: auto;
-  width: 18rem;
 }
 
 .post-info__comment {
@@ -265,7 +287,6 @@
   padding: 10px;
   word-break: break-all;
   gap: 10px;
-  width: 18rem;
 }
 
 .post-info__comment img,
@@ -328,6 +349,47 @@
   .post-popup {
     grid-template-columns: 1fr;
     width: 100%;
+  }
+
+  .post-info__comments-ul {
+    width: 18rem;
+  }
+
+  .post-info__comments {
+    width: 18rem;
+  }
+
+  .post-popup .post-info {
+    width: 18rem;
+  }
+
+  .post-info__header {
+    width: 18rem;
+  }
+
+  .post-info__controls {
+    width: 18rem;
+  }
+
+  .post-info__add-comment {
+    width: 18rem;
+  }
+
+  .post-info__comment {
+    width: 18rem;
+  }
+
+  .post-img {
+    width: 18rem;
+    height: 18rem;
+  }
+
+  .post-popupp {
+    width: 20rem;
+  }
+
+  .postPopupBackground {
+    align-items: flex-start;
   }
 
   /* .user-page__posts {
